--- a/resources/views/emails/welcome.edge
+++ b/resources/views/emails/welcome.edge
@@ -1,3 +1,5 @@
-<p>
-    hola mundo {{userName}} {{userLastName}}
-</p>
+<div class="container">
+    <div class="item">
+        <a href="http://localhost:4200/resetPassword/{{token}}&{{id}}">http://restablecer/cuenta</a>
+    </div>
+</div>
