--- a/resources/views/emails/welcome.edge
+++ b/resources/views/emails/welcome.edge
@@ -1,5 +1,6 @@
 <div class="container">
     <div class="item">
-        <a href="http://localhost:4200/resetPassword/{{token}}&{{id}}">http://restablecer/cuenta</a>
+        <a href="http://redescv.ddns.net:4200/resetPassword/{{token}}&{{id}}">http://restablecer/cuenta</a>
     </div>
 </div>
+
